--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 greenlet==3.0.3
 idna==3.6
+numpy==1.26.3
 requests==2.31.0
 soupsieve==2.5
 SQLAlchemy==2.0.25
